--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "test": "test"
     },
     "dependencies": {
+        "@openzeppelin/contracts": "^2.4.0",
         "nconf": "^0.10.0"
     },
     "devDependencies": {},
