Driver contract accepts ETH and beneficiary ENS. It then calculates the GIFT tokens and transfers them to the caller after transferring ETH to the beneficiary.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@openzeppelin/contracts": "^2.4.0",
+        "chainlink": "^0.7.9",
         "nconf": "^0.10.0"
     },
     "devDependencies": {},
