feat: add event and getters

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@openzeppelin/contracts": "^2.4.0",
         "chainlink": "^0.7.9",
         "nconf": "^0.10.0",
+        "truffle-hdwallet-provider": "^1.0.17",
         "web3": "^1.2.2"
     },
     "devDependencies": {
